[gd_scene load_steps=2 format=3 uid="uid://b1xu7c0fhg4at"]

[ext_resource type="Script" path="res://ui/stage_select.gd" id="1_1iel2"]

[node name="StageSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1iel2")
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 64.0
offset_top = 16.0
offset_right = 496.0
offset_bottom = -16.0
grow_vertical = 2

[node name="StagePanel" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(242, 87)
layout_mode = 2

[node name="StageLabel" type="Label" parent="VBoxContainer/StagePanel"]
layout_mode = 0
offset_left = 15.0
offset_top = 14.0
offset_right = 127.0
offset_bottom = 37.0
text = "Custom Levels"

[node name="ProgressLabel" type="Label" parent="VBoxContainer/StagePanel"]
layout_mode = 0
offset_left = 19.0
offset_top = 49.0
offset_right = 59.0
offset_bottom = 72.0
text = "0/12"

[node name="PlayButton" type="Button" parent="VBoxContainer/StagePanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -15.5
offset_right = -14.0
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
text = "Play"

[node name="StagePanel6" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(242, 87)
layout_mode = 2

[node name="StageLabel" type="Label" parent="VBoxContainer/StagePanel6"]
layout_mode = 0
offset_left = 15.0
offset_top = 14.0
offset_right = 127.0
offset_bottom = 37.0
text = "Custom Levels"

[node name="ProgressLabel" type="Label" parent="VBoxContainer/StagePanel6"]
layout_mode = 0
offset_left = 19.0
offset_top = 49.0
offset_right = 59.0
offset_bottom = 72.0
text = "0/12"

[node name="PlayButton" type="Button" parent="VBoxContainer/StagePanel6"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -15.5
offset_right = -14.0
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
text = "Play"

[node name="InfoPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -512.0
offset_top = 16.0
offset_right = -56.0
offset_bottom = -24.0
grow_horizontal = 0
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="InfoPanel"]
layout_mode = 0
offset_left = 24.0
offset_top = 18.0
offset_right = 136.0
offset_bottom = 41.0
text = "Custom Levels"

[node name="DescriptionLabel" type="Label" parent="InfoPanel"]
layout_mode = 0
offset_left = 29.0
offset_top = 50.0
offset_right = 415.0
offset_bottom = 258.0
text = "Levels created by user and levels obtained from sharing"
autowrap_mode = 3

[node name="PlayButton" type="Button" parent="InfoPanel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -72.0
offset_top = -55.0
offset_right = -31.0
offset_bottom = -24.0
grow_horizontal = 0
grow_vertical = 0
text = "Play"
